Fix scrollbar showing up on public page

--- a/apps/files_sharing/css/public.scss
+++ b/apps/files_sharing/css/public.scss
@@ -1,6 +1,6 @@
 #content {
 	height: initial;
-	min-height: calc(100vh - 120px);
+	min-height: calc(100vh - 160px);
 }
 
 #header .menutoggle {
